--- a/style.css
+++ b/style.css
@@ -3,6 +3,22 @@ body{
     font-family: tahoma;
  
 }
+p{
+    color:gray;
+    font-size: 12px;
+    word-spacing: 2px;
+
+}
+.same-button{
+    background-color: #f39c12;
+    border:none;
+    height:44px;
+    width: 130px;
+    border-radius: 6px;
+    color:white;
+    margin: 30px 0;
+
+}
 .header-area{
     background-color: #f5ecd9;
 }
@@ -34,22 +50,7 @@ body{
     text-align:center;
     margin-top: 60px;
 }
-.header-middle p{
-    color:gray;
-    font-size: 12px;
-    word-spacing: 2px;
 
-}
-.header-middle button{
-    background-color: #f39c12;
-    border:none;
-    height:44px;
-    width: 130px;
-    border-radius: 6px;
-    color:white;
-    margin: 30px 0;
-
-}
 /* header-middle area end */
 /* header-bottom area start */
 .header-bottom img{
@@ -57,4 +58,96 @@ body{
     margin-bottom: 40px;
 }
 /* header-bottom area end */
+
+/* -------------------main-area start from here ----------------------*/
+/* section-1 start */
+.section-1{
+    display:flex;
+    align-items: center;
+    margin-bottom: 50px;
+}
+.section-1 .left-side{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 25px;
+    margin-top:30px;
+    margin-right:40px;
+}
+.section-1 .left-side img{
+    height: 300px;
+    width: 300px;
+}
+.section-1 .right-side .text1{
+    color:gray;
+    font-weight: normal;
+
+}
+.section-1 .right-side .text2{
+    color:#f39c12;
+
+}
+
+/* section-1 end */
+/* section-2 start */
+.section-2{
+    display:flex;
+    justify-content: space-between;
+    margin-bottom:100px;
+}
+.section-2 .left{
+    width:40%;
+}
+.section-2 .right{
+    width:45%;
+    position:relative;
+}
+.section-2 .right .btn{
+    position:absolute;
+    left:-50px;
+    bottom:0px;
+
+}
+.section-2 .right .btn{
+  background-color:#f39c12;
+  color:#FFFFFF;
+  border:none;
+  height:100px;
+  width:160px;
+  border-radius: 6px;
+
+}
+.btn p{
+    color:#FFFFFF;
+}
+.line{
+    border-left: 4px solid green;
+    height: 70px;
+    margin-top: 25px;
+    margin-right: 15px;
+}
+.section-2-top{
+    display:flex;
+
+}
+.section-2 .right img{
+    width:100%;
+}
+.section-2 .information{
+    display:grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+    
+}
+.section-2 .info{
+    border-radius: 6px;
+    padding:20px;
+    padding-top:0;
+    background-color: white;
+    box-shadow: 0px 0px 5px 5px #f1f2f6;
+ 
+}
+.info h5{
+    margin-bottom:0;
+}
+
 
