--- a/style.css
+++ b/style.css
@@ -149,5 +149,97 @@ p{
 .info h5{
     margin-bottom:0;
 }
+/* --------section-2 end -----------*/
+/* --------section-3 start -----------*/
+.section-3{
+    margin-bottom: 100px;
+}
+.fact{
+    margin-bottom: 60px;
+}
+.reward{
+    height: 150px;
+    display:grid;
+    grid-template-columns:repeat(4, 150px);
+    justify-content: space-evenly;
+    align-items: center;
+}
+.box{
+    height: 90px;
+    width: 90px;
+    padding: 20px;
+    text-align: center;
+    border: 1px solid #ffa502;
+    transition:width 1s,height 1s, transform 2s;
+}
+.box:hover{
+    width:110px;
+    height:110px;
+    transform: rotate(360deg);
+}
+.box h2{
+    margin:0;
+}
+/* section-4 start */
+.section-4{
+    margin-bottom: 100px;
+}
+.section-4 .sponsor{
+    text-align: center;
+    margin-bottom:50px;
+}
+.section-4 .icon{
+    display:grid;
+    grid-template-columns: repeat(5, 1fr);
+    align-items: center;
+}
+.icon img{
+    height: 30px;
+    width: 80px;
+}
+.icon .contrast{
+    filter: contrast(0);;
+}
+.icon .black{
+    filter: brightness(0);;
+}
+/* ----------section-5 start here---------- */
+.personal .content{
+	display: flex;
+}
+.personal-left{
+	margin: 100px 100px;
 
+}
+.personal-right{
+	margin-top: 200px;
+}
+.personal-left img{
+	height: 400px;
+	width: 300px;
+}
+.personal-right table td, th{
+	border: 1px solid black;
+	padding: 12px 12px;
+
+}
+.personal-right table {
+	border: 1px solid black;
+	border-collapse: collapse;
+}
+/* section-5 end */
+/* footer-part */
+.footer-area{
+    margin-bottom:100px;
+}
+.last-part{
+    height: 50px;
+    width: 100%;
+    background-color: #f5ecd9;
+    border-radius: 7px;
+}
+.pera-part p{
+    text-align: center;
+    padding-top: 18px;
+}
 
